--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
        <div class="box">
         <i class="fa-solid fa-magnifying-glass"></i>
         <input type="text" placeholder="Search facebook">
-        
-
-       </div>   
+       </div>
+       <!--------middle navigation------------>
+       <div class="middle_nav">
+        <ul>
+            <li><img src="./images/home.png" alt=""></li>
+            <li><img src="./images/video.png" alt=""></li>
+            <li><img src="./images/marketplace.png" alt=""></li>
+            <li><img src="./images/group1.png" alt=""></li>
+            <li><img src="./images/gaming.png" alt=""></li>
+        </ul>
+       </div>
      
     </nav>
    
