--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook  Home Page</title>
+    <!--------- CSS Font Awesome Link Added ----------->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!---------- CSS Link Style Added ------------>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -46,18 +48,65 @@
 
     <div class="body_left">
         <div class="container2">
+            <!----------- Acoount & Image Html Start --------------->
             <div class="fb_left">
                 <ul1>
                     <li><img src="./images/account1.png" alt=""></li>
                     <li><p>Rakibul Islam</p></li>
                 </ul>
             </div>
+            <!---------- Friends Html Start -------------->
             <div class="friends1">
                 <ul2>
                     <li><i data-visualcompletion="css-img" class="icon" style="background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/yz/r/4GR4KRf3hN2.png?_nc_eui2=AeGYiALRYMXqUlda9OIPJlIaiXYVTRy2fzKJdhVNHLZ_Mj4NabYi6IGQv4YcbJvaGaLRkmfk7upJgpK1TkUh8t8e');background-position:0 -296px;background-size:auto;width:36px;height:36px;background-repeat:no-repeat;display:inline-block"></i></li>
                     <li><p>Friends</p></li>
                 </ul2>
             </div>
+            <!---------- Facebook Pages Html ------------->
+            <div class="facebook_pages">
+                <ul3>
+                    <li><i data-visualcompletion="css-img" class="" style="background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/yz/r/4GR4KRf3hN2.png?_nc_eui2=AeGYiALRYMXqUlda9OIPJlIaiXYVTRy2fzKJdhVNHLZ_Mj4NabYi6IGQv4YcbJvaGaLRkmfk7upJgpK1TkUh8t8e');background-position:0 -111px;background-size:auto;width:36px;height:36px;background-repeat:no-repeat;display:inline-block"></i></li>
+                    <li><p>Pages</p></li>
+                </ul3>
+            </div>
+
+            <!-------- Facebook Saved Option Html ---------->
+            <div class="facebook_paged">
+                <ul4>
+                    <li><i data-visualcompletion="css-img" class="" style="background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/yz/r/4GR4KRf3hN2.png?_nc_eui2=AeGYiALRYMXqUlda9OIPJlIaiXYVTRy2fzKJdhVNHLZ_Mj4NabYi6IGQv4YcbJvaGaLRkmfk7upJgpK1TkUh8t8e');background-position:0 -185px;background-size:auto;width:36px;height:36px;background-repeat:no-repeat;display:inline-block"></i></li>
+                    <li><p>Saved</p></li>
+                </ul4>
+            </div>
+
+            <!---------- Facebook Memories Start----------->
+            <div class="memories">
+                <ul5>
+                    <li><i data-visualcompletion="css-img" class="" style="background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/yz/r/4GR4KRf3hN2.png?_nc_eui2=AeGYiALRYMXqUlda9OIPJlIaiXYVTRy2fzKJdhVNHLZ_Mj4NabYi6IGQv4YcbJvaGaLRkmfk7upJgpK1TkUh8t8e');background-position:0 -444px;background-size:auto;width:36px;height:36px;background-repeat:no-repeat;display:inline-block"></i></li>
+                    <p>Memories</p>
+                </ul5>
+            </div>
+
+            <!---------- Facebook Group Start ------------->
+            <div class="group">
+                <ul6>
+                    <li><i data-visualcompletion="css-img" class="" style="background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/yz/r/4GR4KRf3hN2.png?_nc_eui2=AeGYiALRYMXqUlda9OIPJlIaiXYVTRy2fzKJdhVNHLZ_Mj4NabYi6IGQv4YcbJvaGaLRkmfk7upJgpK1TkUh8t8e');background-position:0 -37px;background-size:auto;width:36px;height:36px;background-repeat:no-repeat;display:inline-block"></i></li>
+                <p>Group</p>
+                </ul>
+            </div>
+
+            <!--------- Facebook See More Start ------------>
+            <div class="see_more">
+                <ul7>
+                    <li><div class="x78zum5 xdt5ytf xq8finb x1xmf6yo x1e56ztr x1n2onr6 xamitd3 x1ywmky0 xnd27nj xv2ei83 x1og3r51 xv3fwf9"><div class="x14yjl9h xudhj91 x18nykt9 xww2gxu x6s0dn4 x972fbf xcfux6l x1qhh985 xm0m39n x9f619 x3nfvp2 xl56j7k x1n2onr6 x1qhmfi1 xc9qbxq x14qfxbe"><svg viewBox="0 0 16 16" width="20" height="20" fill="currentColor" class="x19dipnz x1lliihq x1k90msu x2h7rmj x1qfuztq" style="--color:var(--primary-icon)"><g fill-rule="evenodd" transform="translate(-448 -544)"><path fill-rule="nonzero" d="M452.707 549.293a1 1 0 0 0-1.414 1.414l4 4a1 1 0 0 0 1.414 0l4-4a1 1 0 0 0-1.414-1.414L456 552.586l-3.293-3.293z"></path></g></svg></div></div></li>
+                    <p>See More</p>
+                </ul7>
+            </div>
+            <!-- facebook border bottom line -->
+            <div class="border_bootom">
+
+            </div>
+
+
         </div>
         
             
