--- a/index.html
+++ b/index.html
@@ -105,6 +105,62 @@
             <div class="border_bootom">
 
             </div>
+            <!-- Facebook Border Bottom Line End -->
+
+            <!---------- facebook Left side sortcurt ----------->
+            <div class="short_curt">
+                <span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6 x1j85h84" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">Your shortcuts</span>
+            </div>
+            <!-- Facebook Edit Button start -->
+            <!-- <div class="Edit">
+                <button class="btn">Edit</button>
+            </div> -->
+            <!-- Facebook Edit Button End -->
+
+            <!----------- SEO Expert With Faisaliteb start  -------------->
+            <div class="seo_expert">
+                <ul8>
+                    <li><img src="./images/seo expert.jpg" alt=""></li>
+                    <li><span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">SEO Expert with Faisaliteb Support 🎯</span></li>
+                </ul>
+            </div>
+            <!----------- SEO Expert With Faisaliteb End  -------------->
+
+            <!----------- Learn From Top Rated Freelancer start  -------------->
+            <div class="freelancer">
+                <ul9>
+                    <li><img src="./images/hridoy vai.jpg" alt=""></li>
+                    <li><span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">Learn From Top Rated Freelancer</span></li>
+                </ul>
+            </div>
+            <!----------- Learn From Top Rated Freelancer End  -------------->
+
+            <!----------- Free Wordpress Theme And Plugin start  -------------->
+            <div class="wordpress">
+                <ul10>
+                    <li><img src="./images/free wordpress.png" alt=""></li>
+                    <li><span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">Free wordpress theme and plugin</span></li>
+                </ul>
+            </div>
+            <!----------- Free Wordpress Theme And Plugin End  -------------->
+
+            <!----------- Hablu Programmer Community start  -------------->
+            <div class="hablu">
+                <ul11>
+                    <li><img src="./images/hablu.png" alt=""></li>
+                    <li><span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">Hablu Programmer Community</span></li>
+                </ul>
+            </div>
+            <!----------- Hablu Programmer Community End  -------------->
+            
+            <!----------- Unique Way Of Your Selling service start  -------------->
+            <div class="unique">
+                <ul12>
+                    <li><img src="./images/unique selling.jpg" alt=""></li>
+                    <li><span class="x1lliihq x6ikm8r x10wlt62 x1n2onr6" style="-webkit-box-orient:vertical;-webkit-line-clamp:2;display:-webkit-box">Unique way of selling your service 🎯</span></li>
+                </ul>
+            </div>
+            <!----------- Unique Way Of Your Selling service End  -------------->
 
 
         </div>
