--- a/index.html
+++ b/index.html
@@ -487,6 +487,63 @@
             <div class="boder_bottom6">
 
             </div>
+            <div class="birthday">
+                <p>Birthday</p>
+            </div>
+            <div class="birth">
+                <i data-visualcompletion="css-img" class="x1b0d41 xl1xv1r" style="height:36px;width:36px;background-image:url('https://static.xx.fbcdn.net/rsrc.php/v3/ya/r/8Dqt1ZVqjFF.png?_nc_eui2=AeGNAKuikc0DBrTsjcB-ZWSj__aYPxIO_Sb_9pg_Eg79JpQCfGKhWAY3DxYI65OQfVnBTS6zRvWGNOjj_RGymafs');background-position:0 0;background-size:auto;background-repeat:no-repeat;display:inline-block"></i>
+                <p>
+                Kausar Ahmed birthday is today.
+                </p>
+            </div>
+            <div class="boder_bottom7">
+
+            </div>
+            <div class="contact6">
+                <p>Contact</p>
+            </div>
+            <!----------------- Right Side Search Bar Start ------------------------->
+            <div class="search3">
+                <i class="fas fa-search"></i>
+            </div>
+            <!----------------- Right Side Search Bar End ------------------------->
+            <!----------------- Right Side Dot Start ------------------------->
+            <div class="dot_left">
+                <i class="fa-solid fa-ellipsis"></i>
+            </div>
+            <!----------------- Right Side Dot End ------------------------->
+            <!------------------ Tamanna Active Status Start--------------------->
+            <div class="tamanna_active">
+                <div class="tamanna_a">
+                    <img src="./images/tamanna a.jpg" alt="">
+                </div>
+                <!-------------- Tamanna Active Status Circle Start ------------------->
+                <div class="ring-container1">
+                    <div class="ringring1"></div>
+                    <div class="circle1"></div>
+                </div>
+                <!-------------- Tamanna Active Status Circle End ------------------->
+                <div class="tamanna_name">
+                    <p>Tammu Jaman</p>
+                </div>
+            </div>
+            <!------------------ Tamanna Active Status End--------------------->
+            <!------------------ Hriday Active Status Start--------------------->
+            <div class="hridoy_active">
+                <div class="hridoy_active">
+                    <img src="./images/hridao.jpg" alt="">
+                </div>
+                <!-------------- Hriday Active Status Circle Start ------------------->
+                <div class="ring-container2">
+                    <div class="ringring2"></div>
+                    <div class="circle2"></div>
+                </div>
+                <!-------------- Hriday Active Status Circle End ------------------->
+                <div class="hriday_name">
+                    <p>Hriday Ray</p>
+                </div>
+            </div>
+            <!------------------ Hriday Active Status End--------------------->
      </section>
     
 
